# ocaml-fiu

./: README.md  dune-project  fiu-posix.opam  fiu.opam  fiu.opam.template
src/: dune  fiu.ml  fiu.mli  point.ml  posix.ml  posix.mli  posix_intf.ml
src/config/: discover.ml
src/ffi/: dune  fiu_bindings.ml  fiu_ffi.mli
src/fiu/: common.ml  dune  fiu.ml  fiu.mli  point.ml
src/fiu-posix/: dune  fiu_posix.ml  fiu_posix.mli  fiu_posix_intf.ml
src/fiu/ffi/: fiu_ffi.ml  stubgen.ml
test/: dune  test.ml
